<resources>
    <string name="app_name">AttendanceTracker</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="button_submit">Submit</string>
    <string name="roster_add">Add Member</string>
    <string name="roster">Roster</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="edit_name">Enter Name</string>
    <string name="edit">Edit</string>
    <string name="title_activity_activity_display_message">activity_display_message</string>
    <string name="title_activity_upload_member">upload_member</string>
    <string name="title_activity_list_items">list_items</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="null_value"></string>
    <string name="newMember">New Member</string>
    <string name="back">Back</string>
    <string name="editMember">Edit Member</string>
    <string name="grade">Grade</string>
    <string name="student">Student ID</string>
    <string name="birthday">Birthday</string>
    <string name="Save">Save</string>

</resources>
