<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.blakelassgmail.attendance.MainActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/back" />

        <TextView android:id="@+id/editMember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:text="@string/editMember"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp" />
    </LinearLayout>

    <EditText android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_below="@+id/edit_name"
        />

    <EditText android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/edit_phone" />

    <EditText android:id="@+id/edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/student"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/edit_email" />

    <EditText android:id="@+id/edit_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/grade"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/edit_student" />

    <Button android:id="@+id/dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_below="@+id/edit_grade" />

    <Button android:id="@+id/saveBtn"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_below="@+id/dateBtn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

