<?xml version="1.0" encoding="utf-8"?>
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.blakelassgmail.attendance.MainActivity">

    <include android:id="@+id/app_bar"
        layout="@layout/app_bar"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/linearLayout">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:layout_gravity="top"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            android:layout_gravity="top" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/app_bar">

        <TextView android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="Name: "
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

        <TextView android:id="@+id/view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:hint="@string/name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />
    </LinearLayout>


    <LinearLayout android:id="@+id/phoneLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/nameLayout">

        <TextView android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="Phone: "
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1" />

    <TextView android:id="@+id/view_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="#000000"
        android:hint="@string/phone"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/phoneLayout"
        android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout android:id="@+id/emailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/phoneLayout">

        <TextView android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="Email: "
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />

    <TextView android:id="@+id/view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout android:id="@+id/studentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/emailLayout">


        <TextView android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="Student ID: "
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />

        <TextView android:id="@+id/view_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:hint="@string/student"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout android:id="@+id/gradeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/studentLayout">

    <TextView android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="Grade: "
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0" />

        <TextView android:id="@+id/view_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:hint="@string/grade"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout android:id="@+id/birthdayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/gradeLayout">

    <TextView android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="Birthday: "
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="0" />

        <TextView android:id="@+id/view_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="#000000"
            android:hint="@string/birthday"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0" />

    </LinearLayout>


</RelativeLayout>

